--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,30 @@ form {
 }
 
 p {
-  width: 80%;
-  padding: 2em;
+  min-width: 150px;
+  padding: 0.3em;
+  font-size: 36px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.colorField {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
   margin: 50px auto 10px auto;
   border-radius: 5px;
+}
+
+.selectorContainer {
+  width: 400px;
+  display: flex;
+  justify-content: space-aroun;
+  padding-left: 50px;
+}
+select {
+  min-width: 80px;
+  margin: 1em;
+  font-size: 24px;
 }
